GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2021 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.33

Major new features:

* The dynamic linker accepts the --argv0 argument and provides opportunity
  to change argv[0] string.

* The mallinfo2 function is added to report statistics as per mallinfo,
  but with larger field widths to accurately report values that are
  larger than fit in an integer.

* Add <sys/platform/x86.h> to provide query macros for x86 CPU features.

* Support for the RISC-V ISA running on Linux has been expanded to run on
  32-bit hardware.  This is supported for the following ISA and ABI pairs:

    - rv32imac ilp32
    - rv32imafdc ilp32
    - rv32imafdc ilp32d

  The 32-bit RISC-V port requires at least Linux 5.4, GCC 7.1 and binutils
  2.28.

* A new fortification level _FORTIFY_SOURCE=3 is available.  At this level,
  glibc may use additional checks that may have an additional performance
  overhead.  At present these checks are available only on LLVM 9 and later.
  The latest GCC available at this time (10.2) does not support this level of
  fortification.

Deprecated and removed features, and other changes affecting compatibility:

* The mallinfo function is marked deprecated.  Callers should call
  mallinfo2 instead.

* When dlopen is used in statically linked programs, alternative library
  implementations from HWCAP subdirectories are no longer loaded.
  Instead, the default implementation is used.

* The deprecated <sys/vtimes.h> header and the function vtimes have been
  removed.  To support old binaries, the vtimes function continues to exist
  as a compatibility symbol.  Applications should use the getrlimit or
  prlimit.

* Following a change in the tzdata 2018a release upstream, the zdump